Fixed nav bug where menu wouldn't open on mobile

--- a/src/Nav.css
+++ b/src/Nav.css
@@ -2,7 +2,7 @@
   padding: 15px 0 15px 0;
 }
 
-.navbar-collapse {
+#navbarNav {
   justify-content: right;
 }
 
